Aggiunti suggerimenti su immutabilità e null-checking